Remove the initial displayed on-screen values in the HTML, code a class change in javascript to emulate the buttons being pressed when the user presses the related key, code the unpressButton() timeout function that delete the class, code the style for the new class in the CSS.

--- a/style.css
+++ b/style.css
@@ -84,6 +84,10 @@ button.original {
     color: #78bea6;
 }
 
+button.keyPressed {
+    border-style: inset;
+}
+
 #brand {
     width: 100%;
     align-self: center;
